# Soda-Kanban

./: .gitignore  README.md  known_issues.md  requirements.md  todos.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_user_profile_fields.py  003_user_workspace_id.py  004_multi_workspace_membership.py
backend/app/: config.py  main.py
backend/app/api/v1/: attachments.py  auth.py  boards.py  cards.py  comments.py  invitations.py  lists.py  router.py  users.py  workspaces.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: attachments.py  avatars.py  board_events.py  invitations.py  permissions.py
backend/app/ws/: board.py
backend/scripts/: docker-entrypoint.sh
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CardAttachments.tsx  CardDetailModal.tsx  CardFields.tsx  CardFormModal.tsx  CardItem.tsx  KanbanBoard.tsx  KanbanColumn.tsx  SortableCard.tsx  UserAvatar.tsx  WorkspaceGuard.tsx
frontend/src/hooks/: useBoardSocket.ts
frontend/src/pages/: AuthPages.tsx  BoardPage.tsx  DashboardPage.tsx  ProfileEditPage.tsx  ProfilePage.tsx  (+3 more)
infra/: docker-compose.yml
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
(+31 files in other folders)
