[project]
name = "kis-trello-api"
version = "0.1.0"
description = "KIS-TRELLO FastAPI backend"
authors = [{ name = "KIS-TRELLO" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "boto3 (>=1.43.32,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "email-validator (>=2.3.0,<3.0.0)",
    "greenlet (>=3.5.2,<4.0.0)",
]

[project.scripts]
kis-trello-api = "app.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
